--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     </header>
     <!-- Main  section -->
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <!-- Section 1 -->
       <section>
         <ul>
