Add title our advantages

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </section>
       <!-- Section 1 -->
       <section>
+        <h2>Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
